log/build_2024-11-21_12-11-00/gui_subscriber/stderr.log
  File "/home/ubuntu/ros2ws/install/gui_subscriber/lib/python3.10/site-packages/gui_subscriber/gui_subscriber.py", line 55
    elif msg.data == 'reset'
                            ^
SyntaxError: expected ':'

